vlib/v/checker/tests/closure_copy_immutable_var_err.vv
fn main() {
	mut name := 'John'

	fn [name] () {
		name = 'Ivan'
		println(name)
	}()
}
